--- a/src/main/resources/templates/memberAuth/signUp.html
+++ b/src/main/resources/templates/memberAuth/signUp.html
@@ -120,11 +120,17 @@
                                 $("#email_check").text("사용중인 아이디입니다 :p");
                                 $("#email_check").css("color", "red");
                                 $("#user_email").focus();
-                            } else {
-                                // 0 : 아이디가 사용가능한 문구
-                                $("#email_check").text("사용가능한 아이디입니다 :p");
-                                $("#email_check").css("color", "blue");
-
+                            } else { // 0
+                                // 공백일 때 아이디 입력 문구
+                                if($('#user_email').val() == ""){
+                                        $('#email_check').text('아이디를 입력해주세요 :)');
+                                        $('#email_check').css('color', 'red');
+                                        $("#user_email").focus();
+                                // 아이디가 사용가능한 문구
+                                }else{
+                                    $("#email_check").text("사용가능한 아이디입니다 :p");
+                                    $("#email_check").css("color", "blue");
+                                }
                             }
                         },
                         error: function () {
