--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -107,8 +107,8 @@
 
                                             <a sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown-item" href="#">관리자 탈퇴</a>
 
-                                            <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="#">반려견 정보 등록</a>
-                                            <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="#">반려견 정보 수정</a>
+                                            <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="/member/dog/save">반려견 정보 등록</a>
+                                            <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="/member/dogs">반려견 정보 수정</a>
                                             <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="#">질병 진단 결과 조회</a>
                                         </div>
                                     </li>
