--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>구해독</title>
-        <link rel="icon" href="../../../../static/leopet/img/favicon.png">
+        <link rel="icon" href="../../../../static/images/dog_paw.png">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="../../../static/leopet/css/bootstrap.min.css">
         <!-- animate CSS -->
