--- a/src/main/resources/templates/disease/diseaseInfo.html
+++ b/src/main/resources/templates/disease/diseaseInfo.html
@@ -19,12 +19,18 @@
                                 <td th:text="${di.name}"></td>
                                 <td th:text="${di.type}"></td>
                             </tr>
+
+                            <tr th:each="diName : ${disName}" class="diNameTR" hidden="true">
+                                <td th:text="${diName.name}"></td>
+                                <td th:text="${diName.count}"></td>
+                            </tr>
                         </tbody>
                     </table>
 
 
                     <div class="col-md-6" id="diagPieChart" style="width: 900px; height: 500px;"></div>
-                    <div class="col-md-6" id="diagTreeMap" style="width: 900px; height: 500px;"></div>
+                    <div class="col-md-6" id="diagDonutChart" style="width: 900px; height: 500px;"></div>
+<!--                    <div class="col-md-6" id="diagTreeMap" style="width: 900px; height: 500px;"></div>-->
 <!--                    <div class="col-md-6" id="diagHistogram" style="width: 900px; height: 500px;"></div>-->
                     <div class="col-md-6" id="diagBarChart" style="width: 900px; height: 500px;"></div>
                     <div class="col-md-6" id="diagStepChart" style="width: 900px; height: 500px;"></div>
@@ -65,7 +71,7 @@
                 // }
 
                 let diseaseData = [];
-                diseaseData.push(['질병', '빈도']);
+                diseaseData.push(['질병 타입', '빈도']);
 
                 for(let i = 0; i < diseaseTR.length; i++) {
                     let tempData = [];
@@ -78,7 +84,7 @@
                 var data = google.visualization.arrayToDataTable(diseaseData);
 
                 var options = {
-                    title: '질병 진단 정보 (파이 그래프)'
+                    title: '질병 진단 정보 (질병 타입별)'
                 };
 
                 var chart = new google.visualization.PieChart(document.getElementById('diagPieChart'));
@@ -86,88 +92,134 @@
                 chart.draw(data, options);
             }
 
-            google.charts.load('current', {'packages':['treemap']});
-            google.charts.setOnLoadCallback(drawTreeMap);
-            function drawTreeMap() {
+            google.charts.load("current", {packages:["corechart"]});
+            google.charts.setOnLoadCallback(drawDonutChart);
 
+            function drawDonutChart() {
                 let diseaseBody = document.getElementsByTagName("tbody");
-                let diTR = document.getElementsByClassName("diTR");
+                let diNameTR = document.getElementsByClassName("diNameTR");
 
                 let diseaseTR = document.getElementsByClassName("diseaseTR");
+                let diTR = document.getElementsByClassName("diTR");
 
-                let diName = [];
-                let diType = [];
-                for(let i = diseaseTR.length; i < diseaseTR.length + diTR.length; i++) {
-                    diName.push(diseaseBody[0].children[i].children[0].textContent);
-                    diType.push(diseaseBody[0].children[i].children[1].textContent);
+                let diTRLength = diseaseTR.length + diTR.length;
+
+                let diseaseName = [];
+                let diseaseCount = [];
+                for(let i = diTRLength; i < diTRLength + diNameTR.length; i++) {
+                    diseaseName.push(diseaseBody[0].children[i].children[0].textContent);
+                    diseaseCount.push(parseInt(diseaseBody[0].children[i].children[1].textContent));
                 }
 
-                let diData = [];
-                diData.push(['질병명', '질병타입', '크기', '색깔']);
+                let diseaseData = [];
+                diseaseData.push(['질병 이름', '빈도']);
 
-                for(let i = 0; i < diTR.length + 1; i++) {
+                console.log(diseaseName);
+                console.log(diseaseCount);
+
+                for(let i = 0; i < diNameTR.length; i++) {
                     let tempData = [];
-                    tempData.push(diName[i]);
-                    tempData.push(diType[i]);
-                    tempData.push(0);
-                    tempData.push(0);
+                    tempData.push(diseaseName[i]);
+                    tempData.push(diseaseCount[i]);
 
-                    diData.push(tempData);
-
-                    console.log(diData[i]);
+                    diseaseData.push(tempData);
                 }
 
-                for(let j = 0; j < diTR.length + 1; j++) {
-                    // if(0번 1번 같으면)
-                    // tempData[2] += 1;
+                console.log(diseaseData);
 
+                var data = google.visualization.arrayToDataTable(diseaseData);
 
-                }
+                var options = {
+                    title: '질병 진단 정보 (질병 이름별)',
+                    pieHole: 0.4,
+                };
 
-                var data = google.visualization.arrayToDataTable(diData);
-                // var data = google.visualization.arrayToDataTable([
-                //     ['질병명', '질병타입', 'Market trade volume (size)', 'Market increase/decrease (color)'],
-                //     ['Global',    null,                 0,                               0],
-                //     ['America',   'Global',             0,                               0],
-                //     ['Europe',    'Global',             0,                               0],
-                //     ['Asia',      'Global',             0,                               0],
-                //     ['Australia', 'Global',             0,                               0],
-                //     ['Africa',    'Global',             0,                               0],
-                //     ['Brazil',    'America',            11,                              10],
-                //     ['USA',       'America',            52,                              31],
-                //     ['Mexico',    'America',            24,                              12],
-                //     ['Canada',    'America',            16,                              -23],
-                //     ['France',    'Europe',             42,                              -11],
-                //     ['Germany',   'Europe',             31,                              -2],
-                //     ['Sweden',    'Europe',             22,                              -13],
-                //     ['Italy',     'Europe',             17,                              4],
-                //     ['UK',        'Europe',             21,                              -5],
-                //     ['China',     'Asia',               36,                              4],
-                //     ['Japan',     'Asia',               20,                              -12],
-                //     ['India',     'Asia',               40,                              63],
-                //     ['Laos',      'Asia',               4,                               34],
-                //     ['Mongolia',  'Asia',               1,                               -5],
-                //     ['Israel',    'Asia',               12,                              24],
-                //     ['Iran',      'Asia',               18,                              13],
-                //     ['Pakistan',  'Asia',               11,                              -52],
-                //     ['Egypt',     'Africa',             21,                              0],
-                //     ['S. Africa', 'Africa',             30,                              43],
-                //     ['Sudan',     'Africa',             12,                              2],
-                //     ['Congo',     'Africa',             10,                              12],
-                //     ['Zaire',     'Africa',             8,                               10]
-                // ]);
-
-                tree = new google.visualization.TreeMap(document.getElementById('diagTreeMap'));
-
-                tree.draw(data, {
-                    minColor: '#f00',
-                    midColor: '#ddd',
-                    maxColor: '#0d0',
-                    headerHeight: 15,
-                    fontColor: 'black',
-                    showScale: true
-                });
+                var chart = new google.visualization.PieChart(document.getElementById('diagDonutChart'));
+                chart.draw(data, options);
             }
+
+            // google.charts.load('current', {'packages':['treemap']});
+            // google.charts.setOnLoadCallback(drawTreeMap);
+            // function drawTreeMap() {
+            //
+            //     let diseaseBody = document.getElementsByTagName("tbody");
+            //     let diTR = document.getElementsByClassName("diTR");
+            //
+            //     let diseaseTR = document.getElementsByClassName("diseaseTR");
+            //
+            //     let diName = [];
+            //     let diType = [];
+            //     for(let i = diseaseTR.length; i < diseaseTR.length + diTR.length; i++) {
+            //         diName.push(diseaseBody[0].children[i].children[0].textContent);
+            //         diType.push(diseaseBody[0].children[i].children[1].textContent);
+            //     }
+            //
+            //     let diData = [];
+            //     diData.push(['질병명', '질병타입', '크기', '색깔']);
+            //
+            //     for(let i = 0; i < diTR.length + 1; i++) {
+            //         let tempData = [];
+            //         tempData.push(diName[i]);
+            //         tempData.push(diType[i]);
+            //         tempData.push(0);
+            //         tempData.push(0);
+            //
+            //         diData.push(tempData);
+            //
+            //         console.log(diData[i]);
+            //     }
+            //
+            //     for(let j = 0; j < diTR.length + 1; j++) {
+            //         // if(0번 1번 같으면)
+            //         // tempData[2] += 1;
+            //
+            //
+            //     }
+            //
+            //     var data = google.visualization.arrayToDataTable(diData);
+            //     // var data = google.visualization.arrayToDataTable([
+            //     //     ['질병명', '질병타입', 'Market trade volume (size)', 'Market increase/decrease (color)'],
+            //     //     ['Global',    null,                 0,                               0],
+            //     //     ['America',   'Global',             0,                               0],
+            //     //     ['Europe',    'Global',             0,                               0],
+            //     //     ['Asia',      'Global',             0,                               0],
+            //     //     ['Australia', 'Global',             0,                               0],
+            //     //     ['Africa',    'Global',             0,                               0],
+            //     //     ['Brazil',    'America',            11,                              10],
+            //     //     ['USA',       'America',            52,                              31],
+            //     //     ['Mexico',    'America',            24,                              12],
+            //     //     ['Canada',    'America',            16,                              -23],
+            //     //     ['France',    'Europe',             42,                              -11],
+            //     //     ['Germany',   'Europe',             31,                              -2],
+            //     //     ['Sweden',    'Europe',             22,                              -13],
+            //     //     ['Italy',     'Europe',             17,                              4],
+            //     //     ['UK',        'Europe',             21,                              -5],
+            //     //     ['China',     'Asia',               36,                              4],
+            //     //     ['Japan',     'Asia',               20,                              -12],
+            //     //     ['India',     'Asia',               40,                              63],
+            //     //     ['Laos',      'Asia',               4,                               34],
+            //     //     ['Mongolia',  'Asia',               1,                               -5],
+            //     //     ['Israel',    'Asia',               12,                              24],
+            //     //     ['Iran',      'Asia',               18,                              13],
+            //     //     ['Pakistan',  'Asia',               11,                              -52],
+            //     //     ['Egypt',     'Africa',             21,                              0],
+            //     //     ['S. Africa', 'Africa',             30,                              43],
+            //     //     ['Sudan',     'Africa',             12,                              2],
+            //     //     ['Congo',     'Africa',             10,                              12],
+            //     //     ['Zaire',     'Africa',             8,                               10]
+            //     // ]);
+            //
+            //     tree = new google.visualization.TreeMap(document.getElementById('diagTreeMap'));
+            //
+            //     tree.draw(data, {
+            //         minColor: '#f00',
+            //         midColor: '#ddd',
+            //         maxColor: '#0d0',
+            //         headerHeight: 15,
+            //         fontColor: 'black',
+            //         showScale: true
+            //     });
+            // }
 
              // google.charts.load("current", {packages:["corechart"]});
              // google.charts.setOnLoadCallback(drawHistogram);
