--- a/src/main/resources/templates/members/recommends/recommendation.html
+++ b/src/main/resources/templates/members/recommends/recommendation.html
@@ -104,10 +104,10 @@
             function drawDonutChart() {
 
                 let diagnosisData = [];
-                diagnosisData.push(['질병 진단', '빈도']);
-                diagnosisData.push(['마카다미아너트 중독증', parseFloat(document.getElementById("macakProb").textContent)]);
-                diagnosisData.push(['코로나 바이러스 감염증', parseFloat(document.getElementById("cornaProb").textContent)]);
-                diagnosisData.push(['기관지 확장증', parseFloat(document.getElementById("brochusProb").textContent)]);
+                diagnosisData.push(['질병 진단 이름', '비중']);
+                diagnosisData.push(['마카다미아너트 중독증', parseFloat(document.getElementById("macakProb").textContent)*100]);
+                diagnosisData.push(['코로나 바이러스 감염증', parseFloat(document.getElementById("cornaProb").textContent)*100]);
+                diagnosisData.push(['기관지 확장증', parseFloat(document.getElementById("brochusProb").textContent)*100]);
 
                 var data = google.visualization.arrayToDataTable(diagnosisData);
 
