--- a/src/main/resources/templates/memberAuth/signUp.html
+++ b/src/main/resources/templates/memberAuth/signUp.html
@@ -5,11 +5,11 @@
         <header th:replace="fragments/header :: headerFragment"></header>
 
         <div class="limiter">
-            <div class="container-login100" style="background-image: url('../../static/images/bg-01.jpg');">
+            <div class="container-login100" style="background-image: url('/../../static/images/bg-01.jpg');">
                 <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
                     <!--/*@thymesVar id="memberForm" type=""*/-->
 
-
+                    <form class="login100-form validate-form" action="/api/member/signup" th:object="${memberForm}" method="post">
                         <!--                  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
                         <span class="login100-form-title p-b-49">회원가입</span>
 
