--- a/src/main/resources/templates/memberAuth/signUp.html
+++ b/src/main/resources/templates/memberAuth/signUp.html
@@ -9,8 +9,7 @@
                 <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
                     <!--/*@thymesVar id="memberForm" type=""*/-->
 
-
-                        <!--                  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+                    <form class="login100-form validate-form" action="/api/member/signup" th:object="${memberForm}" method="post">
                         <span class="login100-form-title p-b-49">회원가입</span>
 
                         <div class="form-group">
@@ -21,7 +20,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label th:for="email">이메일</label>
+                            <label th:for="emaFil">이메일</label>
                             <input type="email" th:field="*{email}" class="form-control"
                                    id="user_email" placeholder="이메일을 입력해주세요 ('@' 포함해주세요)" required>
                             <div class="check_font" id="email_check"></div>
