--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -36,36 +36,37 @@
                             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
-                                        <a sec:authorize="hasRole('ROLE_MEMBER')" class="nav-link" th:href="@{/member/disease/chart}">반려견 질병 진단</a>
+                                        <a sec:authorize="hasRole('ROLE_MEMBER')" class="nav-link" th:href="@{/member/disease/chart}">질병 진단 서비스</a>
                                         <a sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link" th:href="@{/admin/members}">회원 관리</a>
                                     </li>
+
                                     <li class="nav-item">
-                                        <a sec:authorize="hasRole('ROLE_MEMBER')" class="nav-link" th:href="@{/member/reservesInfo}">동물병원 예약 조회</a>
                                         <a sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link" th:href="@{/admin/diseases}">질병 관리</a>
+                                        <a sec:authorize="hasRole('ROLE_VET')" class="nav-link" href="#">동물병원 예약 관리</a>
                                     </li>
 
-<!--                                    <li class="nav-item dropdown">-->
-<!--                                        <a sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">질병 관리</a>-->
+                                    <li class="nav-item dropdown">
+                                        <a sec:authorize="hasRole('ROLE_MEMBER')" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">반려견 관리</a>
 
-<!--                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-<!--                                            <a sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown-item" href="/admin/reserves">동물병원 예약 조회</a>-->
-<!--                                            <a sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown-item" th:href="@{/admin/disease/info}">질병 진단 정보 조회</a>-->
-<!--                                        </div>-->
-<!--                                    </li>-->
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="/member/dog/save">반려견 정보 등록</a>
+                                            <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="/member/dogs">반려견 정보 조회</a>
+                                        </div>
+                                    </li>
 
                                     <li class="nav-item dropdown">
                                         <a sec:authorize="hasRole('ROLE_MEMBER')" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">마이페이지</a>
 
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" th:href="@{/member/mypage}">정보조회</a>
-                                            <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="/member/dog/save">반려견 정보 등록</a>
-                                            <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="/member/dogs">반려견 정보 조회</a>
                                             <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="/member/chart/record">질병 진단 결과 조회</a>
+                                            <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" th:href="@{/member/reservesInfo}">동물병원 예약 조회</a>
                                         </div>
                                     </li>
 
                                     <li class="nav-item">
                                         <a sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link" th:href="@{/admin/mypage}">정보조회</a>
+                                        <a sec:authorize="hasRole('ROLE_VET')" class="nav-link" href="#">정보조회</a>
                                     </li>
                                 </ul>
                             </div>
