--- a/src/main/resources/templates/hospital/myHospital.html
+++ b/src/main/resources/templates/hospital/myHospital.html
@@ -8,22 +8,24 @@
             <div class="container-login100" style="background-image: url('/../../static/images/bg-01.jpg');">
                 <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
                     <form class="login100-form validate-form">
-                        <span class="login100-form-title p-b-49">병원 조회</span>
+                        <span class="login100-form-title p-b-49">내 병원 조회</span>
+
+                        <input type="text" id="hospID" th:field="${myHospital.id}" hidden="true">
 
                         <div class="form-group">
                             <label th:for="name">이름</label>
-                            <input type="text" id="hospName" placeholder="병원 이름" th:field="${member.name}" class="form-control" readonly required>
+                            <input type="text" id="hospName" placeholder="병원 이름" th:field="${myHospital.name}" class="form-control" readonly required>
                         </div>
 
                         <div class="form-group">
                             <label th:for="phone">전화번호</label>
-                            <input type="text" id="hospTel" placeholder="병원 전화번호" th:field="${member.phone}" class="form-control"
+                            <input type="text" id="hospTel" placeholder="병원 전화번호" th:field="${myHospital.tel}" class="form-control"
                                    maxlength="11" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" readonly required>
                         </div>
 
                         <div class="form-group">
                             <label th:for="zipcode">주소</label>
-                            <input type="text" id="hospAddr" placeholder="병원 주소" th:field="${member.address.zipcode}" class="form-control" readonly required>
+                            <input type="text" id="hospAddr" placeholder="병원 주소" th:field="${myHospital.address}" class="form-control" readonly required>
                         </div>
                         <br/>
 
